# lisql

./: .gitignore  CNN_Schizophrenia.py  LICENSE  PKG-INFO  README.md  SECURITY.md  about.py  setup.cfg  setup.py
lisql.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt
src/: lisql.py  test.py
src/lisql/: lisql.py
src/lisql.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_ground/: test.py
