[metadata]
name = lisql
version = 2.2
author = Ali Ahammad
author_email = aliahammad0812@outlook.com
description = Provides a simple interface to interact with MySQL databases.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/li812/lisql
project_urls = 
	Bug Tracker = https://github.com/li812/lisql/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

